log
Thu 09 Mar 2023 03:47:56 PM UTC: 
 tests:  0|7
total_score: 0/70
06b5c26
Thu 09 Mar 2023 03:55:36 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int numero = *a
      |                ~~
      |                |
      |                int
   18 |   *b = *a
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *b = *a
      |        ~~
      |        |
      |        int
   19 |   *a = numero
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
4e4d86f
Thu 09 Mar 2023 03:55:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int numero = *a
      |                ~~
      |                |
      |                int
   18 |   *b = *a
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:17:7: error: unused variable ‘numero’ [-Werror=unused-variable]
   17 |   int numero = *a
      |       ^~~~~~
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5e4f221
Thu 09 Mar 2023 03:56:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int numero = *a
      |                ~~
      |                |
      |                int
   18 |   *a = *b
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *a = *b
      |        ~~
      |        |
      |        int
   19 |   *b = numero
      |   ^
exercises.c:21:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   21 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
184f733
Thu 09 Mar 2023 03:56:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   17 |   int numero = *a
      |                ~~
      |                |
      |                int
   18 |   *a = *b
      |   ^
exercises.c:19:3: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   18 |   *a = *b
      |        ~~
      |        |
      |        int
   19 |   *b = numero;
      |   ^
Compilation failed
01919d0
Thu 09 Mar 2023 03:56:37 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c17c6ed
Fri 10 Mar 2023 05:48:56 PM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   35 |       scanf("%d",numero);
      |              ~^  ~~~~~~
      |               |  |
      |               |  int
      |               int *
exercises.c:36:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   36 |       scanf("%d",*a);
      |              ~^  ~~
      |               |  |
      |               |  int
      |               int *
exercises.c:39:18: error: request for member ‘max’ in something not a structure or union
   39 |         vector[k].max = numero;
      |                  ^
exercises.c:43:18: error: request for member ‘max’ in something not a structure or union
   43 |         vector[k].max = *a;
      |                  ^
exercises.c:31:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   31 |   int vector[n];
      |       ^~~~~~
exercises.c:35:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   35 |       scanf("%d",numero);
      |       ^~~~~~~~~~~~~~~~~~
exercises.c:36:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   36 |       scanf("%d",*a);
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a2eec4
Fri 10 Mar 2023 05:49:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       scanf("%d",*numero);
      |                  ^~~~~~~
exercises.c:36:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   36 |       scanf("%d",*a);
      |              ~^  ~~
      |               |  |
      |               |  int
      |               int *
exercises.c:39:18: error: request for member ‘max’ in something not a structure or union
   39 |         vector[k].max = numero;
      |                  ^
exercises.c:43:18: error: request for member ‘max’ in something not a structure or union
   43 |         vector[k].max = *a;
      |                  ^
exercises.c:31:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   31 |   int vector[n];
      |       ^~~~~~
exercises.c:36:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   36 |       scanf("%d",*a);
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be7ea84
Fri 10 Mar 2023 05:50:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   35 |       scanf("%d",numero);
      |              ~^  ~~~~~~
      |               |  |
      |               |  int
      |               int *
exercises.c:39:18: error: request for member ‘max’ in something not a structure or union
   39 |         vector[k].max = numero;
      |                  ^
exercises.c:43:18: error: request for member ‘max’ in something not a structure or union
   43 |         vector[k].max = *a;
      |                  ^
exercises.c:31:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   31 |   int vector[n];
      |       ^~~~~~
exercises.c:35:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   35 |       scanf("%d",numero);
      |       ^~~~~~~~~~~~~~~~~~
exercises.c:36:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   36 |       scanf("%d",a);
      |       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a5a3685
Fri 10 Mar 2023 06:10:43 PM UTC: 
 exercises.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:12: error: ‘vector’ undeclared (first use in this function)
   30 |     *max = vector[0];
      |            ^~~~~~
exercises.c:30:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
730e6f2
Fri 10 Mar 2023 06:10:55 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
c9e7648
